# doc_quality_compliance_check

./: .env.example  .env.postgresql.example  .gitignore  ADMIN_README.md  AGENTS.md  ALIGNMENT_REVIEW.md  APP_USER_HANDBOOK.md  AUTHENTICATION_AUTHORIZATION_README.md  CHECKLIST.md  CREWAI_BEST_PRACTICES_ASSESSMENT.md  DATABASE_README.md  DATA_PRIVACY_VIOLATION_MITIGATION_README.md  DOCUMENT_UPLOAD_PERSISTENCE.md  HITL_PERSISTENCE_CHANGE_SUMMARY.md  HITL_PERSISTENCE_FIX.md  HITL_PERSISTENCE_VERIFICATION.md  HITL_QUICK_REFERENCE.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY_LOGGING_README.md  PERSISTENCE_FIX.md  POSTGRES_INFRASTRUCTURE_SETUP.md  POSTGRES_SETUP.md  POSTGRES_SETUP_QUICKSTART.md  PROJECT_STRUCTURE.md  README.md  SEARCH_CONCEPT_README.md  TESTING_README.md  conftest.py  doc_quality.db  docker-compose.yml  init_postgres.py  package-lock.json  pyproject.toml  requirements.txt
frontend/: .env.local  .env.local.example  eslint.config.mjs  index.html  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
migrations/: alembic.ini  env.py
scripts/: start_backend.ps1  start_frontend.ps1
services/orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml
services/orchestrator/src/doc_quality_orchestrator/: __init__.py  __main__.py  config.py  main.py  models.py  privacy_controls.py  runtime_limits.py  service.py  skills_api.py
services/orchestrator/src/doc_quality_orchestrator/adapters/: __init__.py  anthropic_adapter.py  base.py  nemotron_adapter.py  openai_compatible_adapter.py  openai_gateway.py  registry.py  scaffold_utils.py
services/orchestrator/src/doc_quality_orchestrator/crews/: __init__.py  review_flow.py
services/orchestrator/src/doc_quality_orchestrator/crews/config/: agents.yaml  tasks.yaml
services/orchestrator/src/doc_quality_orchestrator/flows/: __init__.py  document_review_flow.py
services/orchestrator/src/doc_quality_orchestrator/prompts/: model_validator_stage_v1.txt
services/orchestrator/tests/: test_llm_contracts.py
services/orchestrator/tests/fixtures/: model_validator_report_invalid_missing_checks.json  model_validator_report_valid.json
tests/: conftest.py  test_adapter_routing_policy.py  test_audit_trail_api.py  test_auth_authorization_api.py  test_auth_rate_limit_api.py  test_auth_recovery_api.py  test_auth_session_api.py  test_bridge_orchestrator_service.py  test_bridge_run_api.py  test_compliance_checker.py  test_compliance_standard_mapping_api.py  test_dashboard_api.py  test_data_privacy_documents.py  test_document_analyzer.py  test_document_hub_live_api.py  test_document_lock_api.py  test_document_review_flow.py  test_documents_read_api.py  test_error_envelope_api.py  test_governance_api.py  test_hitl_workflow.py  test_integration_api_workflow.py  test_llm_integration_smoke.py  test_model_policy_api.py  test_nemotron_gateway.py  test_observability_api.py  test_policy_contract_service.py  test_privacy_controls.py  test_report_generator.py  test_research_api.py  (+12 more)
(+333 files in other folders)
